# blaze2

./: .gitignore  CMakeLists.txt  LICENSE
.zed/: settings.json
cmake/: ExternalAntlr4Cpp.cmake
executable/: CMakeLists.txt  emit_llvm.cpp  main.cpp
executable/commands/: BuildCommand.cpp  BuildCommand.h  EmitCommand.cpp  EmitCommand.h  RunCommand.cpp  RunCommand.h  VerifyCommand.cpp  VerifyCommand.h
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  CodeBackend.h  VcBackend.h
src/backend/llvm/: CMakeLists.txt  llvmbackend.cpp  llvmbackend.h
src/backend/z3/: CMakeLists.txt  z3backend.cpp  z3backend.h
src/core/: CMakeLists.txt  Common.h  DiagnosticPrinter.cpp  DiagnosticPrinter.h  Errors.cpp  Errors.h  Source.cpp  Source.h  Utf8.h
src/driver/: CMakeLists.txt  CompileOptions.h  Driver.cpp  Driver.h
src/frontend/: AntlrVisitor.cpp  AntlrVisitor.h  Ast.cpp  Ast.h  Blaze.g4  Builtins.cpp  Builtins.h  CMakeLists.txt  FrontendDriver.cpp  FrontendDriver.h  Ir.h  IrLower.cpp  IrLower.h  IrPrinter.cpp  IrPrinter.h  ParserDriver.cpp  ParserDriver.h  Resolver.cpp  Resolver.h  Symbol.h  SymbolId.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h  vcgen.h
tests/: CMakeLists.txt  ast_parse_tests.cpp  diagnostic_printer_tests.cpp  driver_tests.cpp  ir_lower_tests.cpp  llvm_ir_tests.cpp  parser_tests.cpp  resolver_driver_tests.cpp  type_checker_tests.cpp  verification_tests.cpp
tests/testfiles/: 01_identity.blz  02_main_returns_zero.blz  02_return_constant.blz  03_verify_success.blz  03_void_function.blz  04_arithmetic.blz  04_verify_fail.blz  05_comparisons.blz  05_parse_error.blz  06_if_else.blz  06_type_error.blz  07_loop_invariant_success.blz  07_while_loops.blz  08_function_calls.blz  09_variables.blz  10_pre_contracts.blz  11_post_contracts.blz  12_pre_post_combined.blz  13_nested_contracts.blz  14_edge_cases.blz  15_blocks_scoping.blz  16_loop_invariants.blz  basic.blz
